--- a/app/views/lpa-questionnaire/fullv2/interested-parties/notify-application-letters.html
+++ b/app/views/lpa-questionnaire/fullv2/interested-parties/notify-application-letters.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Letter sent to interested parties, and their addresses - Tell us how you've informed interested parties - {{serviceName}} - GOV.UK
+  Upload your letter to the neighbours, and their addresses - Tell us how you've informed interested parties - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -30,18 +30,14 @@
           Tell us how you've informed interested parties
         </span>
         <h1 class="govuk-heading-xl">
-          Letter sent to interested parties, and their addresses
+          Upload your letter to the neighbours, and their addresses
         </h1>
-
-        <p class="govuk-body">
-          Upload the letter or site notice you used to tell interested parties about this appeal, and a list of their addresses.
-        </p>
-        
+      
         <div class="govuk-form-group">
-          <label class="govuk-label" for="lpaq-{{version}}-interestedparties-toldappeal-letter">
+          <label class="govuk-label" for="lpaq-{{version}}-interestedparties-notifyapplication-letters">
             Drag and drop or choose files
           </label>
-          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-interestedparties-toldappeal-letter" name="lpaq-{{version}}-interestedparties-toldappeal-letter" type="file" multiple>
+          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-interestedparties-notifyapplication-letters" name="lpaq-{{version}}-interestedparties-notifyapplication-letters" type="file" multiple>
         </div>
 
         {{ govukDetails({
@@ -67,7 +63,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="../task-list">Skip this question</a>
+          <a class="govuk-link" href="tell-application">Skip this question</a>
         </div>
 
       </form>
