--- a/app/views/lpa-questionnaire/fullv2/interested-parties/notify-application-pressadvert.html
+++ b/app/views/lpa-questionnaire/fullv2/interested-parties/notify-application-pressadvert.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Site notice and local advertisement - Tell us how you've informed interested parties - {{serviceName}} - GOV.UK
+  Upload your press advert - Tell us how you've informed interested parties - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -30,14 +30,14 @@
           Tell us how you've informed interested parties
         </span>
         <h1 class="govuk-heading-xl">
-          Site notice and local advertisement
+          Upload your press advert
         </h1>
       
         <div class="govuk-form-group">
-          <label class="govuk-label" for="lpaq-{{version}}-interestedparties-publiciseapplication-sitenotice">
-            Drag and drop or choose files
+          <label class="govuk-label" for="lpaq-{{version}}-interestedparties-notifyapplication-pressadvert">
+            Drag and drop or choose a file
           </label>
-          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-interestedparties-publiciseapplication-sitenotice" name="lpaq-{{version}}-interestedparties-publiciseapplication-sitenotice" type="file" multiple>
+          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-interestedparties-notifyapplication-pressadvert" name="lpaq-{{version}}-interestedparties-notifyapplication-pressadvert" type="file">
         </div>
 
         {{ govukDetails({
