AS-4092 Representation types

--- a/app/views/lpa-questionnaire/fullv2/interested-parties/notify-application-letters.html
+++ b/app/views/lpa-questionnaire/fullv2/interested-parties/notify-application-letters.html
@@ -63,7 +63,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="tell-application">Skip this question</a>
+          <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
 
       </form>
