--- a/app/views/lpa-questionnaire/fullv2/representations/letter-upload.html
+++ b/app/views/lpa-questionnaire/fullv2/representations/letter-upload.html
@@ -1,9 +1,8 @@
 {% set pageref = "" %}
-{% set fromhas = "From HAS" %}
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Upload your press advert - Tell us how you've informed interested parties - {{serviceName}} - GOV.UK
+  Upload the representations you received - Upload representations from interest parties - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -27,17 +26,20 @@
       <form action="" method="post">
 
         <span class="govuk-caption-l">
-          Tell us how you've informed interested parties
+          Upload representations from interest parties
         </span>
         <h1 class="govuk-heading-xl">
-          Upload your press advert
+          Notifying interested parties about this appeal
         </h1>
-      
+        <h2 class="govuk-heading-m">
+          Upload your letter to interested parties, and their addresses
+        </h2>
+        
         <div class="govuk-form-group">
-          <label class="govuk-label" for="lpaq-{{version}}-interestedparties-notifyapplication-pressadvert">
-            Drag and drop or choose a file
+          <label class="govuk-label" for="lpaq-{{version}}-representations-otherparties-upload">
+            Drag and drop or choose files
           </label>
-          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-interestedparties-notifyapplication-pressadvert" name="lpaq-{{version}}-interestedparties-notifyapplication-pressadvert" type="file">
+          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-representations-otherparties-upload" name="lpaq-{{version}}-representations-otherparties-upload" type="file" multiple>
         </div>
 
         {{ govukDetails({
