AS-4087 Remove "formally adopted" from CIL

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -417,12 +417,19 @@
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (2)
+                        Jira Tickets (9)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
                       <ul class="govuk-list govuk-list-bulleted">
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4032" target="_blank">AS-4032 Create consistent patterns for single and multiple files uploads</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4036" target="_blank">AS-4036 Interaction change for type of designated site</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4071" target="_blank">AS-4071 Multiple file uploads as default</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4072" target="_blank">AS-4072 Conservation area question content</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4073" target="_blank">AS-4073 Reduce multiple possible uploads to single for a consultation</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4087" target="_blank">AS-4087 Remove "formally adopted" from CIL</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4078" target="_blank">AS-4078 Interested parties: Amend design so it's flexible to the different ways LPAs work</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4092" target="_blank">AS-4092 Representation types</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4097" target="_blank">AS-4097 LPA Questionnaire save and return functionality</a></li>
                       </ul>
                     </div>
