--- a/app/views/lpa-questionnaire/fullv2/local-plans-policies/cil.html
+++ b/app/views/lpa-questionnaire/fullv2/local-plans-policies/cil.html
@@ -40,6 +40,9 @@
               classes: "govuk-fieldset__legend--xl"
             }
           },
+          hint: {
+            text: "Tell us about any levy that is formally adopted or due to be adopted."
+          },
           items: [
             {
               value: "Yes",
