AS-4101 Refer to designations consistently - acronym or full spelling

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -431,6 +431,7 @@
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4078" target="_blank">AS-4078 Interested parties: Amend design so it's flexible to the different ways LPAs work</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4092" target="_blank">AS-4092 Representation types</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4097" target="_blank">AS-4097 LPA Questionnaire save and return functionality</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4101" target="_blank">AS-4101 Refer to designations consistently - acronym or full spelling</a></li>
                       </ul>
                     </div>
                   </details>
