AS-4129 Supplementary planning documents lead in question

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -432,6 +432,7 @@
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4092" target="_blank">AS-4092 Representation types</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4097" target="_blank">AS-4097 LPA Questionnaire save and return functionality</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4101" target="_blank">AS-4101 Refer to designations consistently - acronym or full spelling</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4129" target="_blank">AS-4129 Supplementary planning documents lead in question</a></li>
                       </ul>
                     </div>
                   </details>
