--- a/app/views/lpa-questionnaire/fullv2/local-plans-policies/supplementary.html
+++ b/app/views/lpa-questionnaire/fullv2/local-plans-policies/supplementary.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Supplementary planning documents - Upload your local plans and policies - {{serviceName}} - GOV.UK
+  Did any supplementary planning documents inform the outcome of the application? - Upload your local plans and policies - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,101 +29,27 @@
         <span class="govuk-caption-l">
           Upload your local plans and policies
         </span>
-        <h1 class="govuk-heading-xl">
-          Supplementary planning documents
-        </h1>
 
-        <p class="govuk-body">
-          You can add one supplementary planning document at a time. You will be able to add more later.
-        </p>
-        
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="lpaq-{{version}}-localplanspolicies-supplementary">
-            Drag and drop or choose files
-          </label>
-          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-localplanspolicies-supplementary" name="lpaq-{{version}}-localplanspolicies-supplementary" type="file" multiple>
-        </div>
-
-        {{ govukDetails({
-          summaryText: "Files you can upload",
-          html: '
-            <p class="govuk-body">
-              You can upload the following types of file:
-            </p>
-            <ul class="govuk-list govuk-list--bullet">
-              <li>DOC or DOCX</li>
-              <li>JPG or JPEG</li>
-              <li>PDF</li>
-              <li>PNG</li>
-              <li>TIF or TIFF</li>
-            </ul>
-            <p class="govuk-body">
-              Your file must be smaller than 15MB.
-            </p>
-          '
-        }) }}
-          
-        {{ govukInput({
-          id: "lpaq-"+version+"-localplanspolicies-supplementary-name",
-          name: "lpaq-"+version+"-localplanspolicies-supplementary-name",
-          classes: "govuk-!-width-two-thirds",
-          label: {
-            classes: "govuk-label--m govuk-!-margin-top-8",
-            text: "Document name"
-          }
-        }) }}
-
-
-        {% set dateHtml %}
-          {{ govukDateInput({
-            id: "lpaq-"+version+"-localplanspolicies-supplementary-adopted-date",
-            namePrefix: "lpaq-"+version+"-localplanspolicies-supplementary-adopted-date",
-            fieldset: {
-              legend: {
-                text: "Tell us the date of adoption"
-              }
-            },
-            hint: {
-              text: "For example, 27 3 2007"
-            }
-          }) }}
-        {% endset -%}
-        {% set stageHtml %}
-          {{ govukInput({
-            label: {
-              text: "Tell us what stage this has reached"
-            },
-            id: "lpaq-"+version+"-localplanspolicies-supplementary-adopted-stage",
-            name: "lpaq-"+version+"-localplanspolicies-supplementary-adopted-stage"
-          }) }}
-        {% endset -%}
-        
         {{ govukRadios({
-          classes: "govuk-radios--inline",
-          idPrefix: "lpaq-"+version+"-localplanspolicies-supplementary-adopted",
-          name: "lpaq-"+version+"-localplanspolicies-supplementary-adopted",
+          idPrefix: "lpaq-"+version+"-localplanspolicies-supplementary",
+          name: "lpaq-"+version+"-localplanspolicies-supplementary",
           fieldset: {
-            classes: "govuk-!-margin-top-8",
             legend: {
-              text: "Is it formally adopted?",
+              text: "Did any supplementary planning documents inform the outcome of the application?",
               isPageHeading: true,
-              classes: "govuk-fieldset__legend--m govuk-!-margin-top-8"
+              classes: "govuk-fieldset__legend--xl"
             }
-          },  
+          },
           items: [
             {
-              value: "yes",
+              value: "Yes",
               text: "Yes",
-              conditional: {
-                html: dateHtml
-              }
+              checked: checked("lpaq-"+version+"-localplanspolicies-supplementary", "Yes")
             },
             {
-              value: "no",
+              value: "No",
               text: "No",
-              conditional: {
-                html: stageHtml
-              }
+              checked: checked("lpaq-"+version+"-localplanspolicies-supplementary", "No")
             }
           ]
         }) }}
