--- a/app/views/lpa-questionnaire/fullv2/proposed-development/involves-listed-building.html
+++ b/app/views/lpa-questionnaire/fullv2/proposed-development/involves-listed-building.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Does the development involve changing a listed building? - Tell us about the proposed development - {{serviceName}} - GOV.UK
+  Does the proposed development involve changing a listed building? - Tell us about the proposed development - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -34,7 +34,7 @@
           name: "lpaq-"+version+"-proposeddevelopment-listedbuilding",
           fieldset: {
             legend: {
-              text: "Does the proposed development involve a listed building?",
+              text: "Does the proposed development involve changing a listed building?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--xl"
             }
