--- a/app/views/lpa-questionnaire/fullv2/surrounding-area/appeals-immediate-area.html
+++ b/app/views/lpa-questionnaire/fullv2/surrounding-area/appeals-immediate-area.html
@@ -30,6 +30,19 @@
           Tell us about the surrounding area
         </span>
 
+        {% set referncesHtml %}
+          {{ govukInput({
+            id: "lpaq-"+version+"-surroundingarea-appealsimmediatearea-references",
+            name: "lpaq-"+version+"-surroundingarea-appealsimmediatearea-references",
+            label: {
+              text: "Appeal reference number(s)"
+            },
+            hint: {
+              text: "You can enter more than one, separated by commas"
+            }
+          }) }}
+        {% endset -%}
+
         {{ govukRadios({
           idPrefix: "lpaq-"+version+"-surroundingarea-appealsimmediatearea",
           name: "lpaq-"+version+"-surroundingarea-appealsimmediatearea",
@@ -44,7 +57,10 @@
             {
               value: "Yes",
               text: "Yes",
-              checked: checked("lpaq-"+version+"-surroundingarea-appealsimmediatearea", "Yes")
+              checked: checked("lpaq-"+version+"-surroundingarea-appealsimmediatearea", "Yes"),
+              conditional: {
+                html: referncesHtml
+              }
             },
             {
               value: "No",
