--- a/app/views/lpa-questionnaire/fullv2/surrounding-area/affects-listed-building-details.html
+++ b/app/views/lpa-questionnaire/fullv2/surrounding-area/affects-listed-building-details.html
@@ -36,43 +36,64 @@
           Tell us about every listed building that's involved in the development. You can add more in the next step.
         </p-->
 
-        {{ govukTextarea({
-          id: "lpaq-"+version+"-surroundingarea-affectslistedbuilding-description",
-          name: "lpaq-"+version+"-surroundingarea-affectslistedbuilding-description",
-          label: {
-            classes: "govuk-label--l",
-            text: "Listing description"
-          },
-          hint: {
-            text: "Take this from the List of Buildings of Special Architectural or Historic Interest."
-          },
-          value: data["lpaq-"+version+"-surroundingarea-affectslistedbuilding-description"]
-        }) }}
-
         {{ govukRadios({
-          idPrefix: "lpaq-"+version+"-surroundingarea-affectslistedbuilding-consulted",
-          name: "lpaq-"+version+"-surroundingarea-affectslistedbuilding-consulted",
+          idPrefix: "lpaq-"+version+"-proposeddevelopment-affectslistedbuilding-grade",
+          name: "lpaq-"+version+"-proposeddevelopment-affectslistedbuilding-grade",
           fieldset: {
             legend: {
-              text: "Has Historic England been consulted?",
-              classes: "govuk-fieldset__legend--l"
+              text: "Listing grade",
+              classes: "govuk-fieldset__legend--m"
             }
           },
           items: [
             {
-              value: "Yes",
-              text: "Yes",
-              checked: checked("lpaq-"+version+"-surroundingarea-affectslistedbuilding-consulted", "Yes")
+              value: "Grade II",
+              text: "Grade II",
+              checked: checked("lpaq-"+version+"-proposeddevelopment-affectslistedbuilding-grade", "Grade II")
             },
             {
-              value: "No",
-              text: "No",
-              checked: checked("lpaq-"+version+"-surroundingarea-affectslistedbuilding-consulted", "No")
+              value: "Grade II*",
+              text: "Grade II*",
+              checked: checked("lpaq-"+version+"-proposeddevelopment-affectslistedbuilding-grade", "Grade II*")
+            },
+            {
+              value: "Grade I",
+              text: "Grade I",
+              checked: checked("lpaq-"+version+"-proposeddevelopment-affectslistedbuilding-grade", "Grade I")
             }
           ]
         }) }}
 
-         <div class="govuk-button-group">
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--m" for="lpaq-"+version+"-proposeddevelopment-affectslistedbuilding-upload">
+            Upload the listing description
+          </label>
+          <div id="contact-hint" class="govuk-hint">
+            Drag and drop or choose a file
+          </div>
+          <input class="govuk-file-upload pins-file-upload" id="lpaq-"+version+"-proposeddevelopment-affectslistedbuilding-upload" name="lpaq-"+version+"-proposeddevelopment-affectslistedbuilding-upload" type="file">
+        </div>
+
+        {{ govukDetails({
+          summaryText: "Files you can upload",
+          html: '
+            <p class="govuk-body">
+              You can upload the following types of file:
+            </p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li>DOC or DOCX</li>
+              <li>JPG or JPEG</li>
+              <li>PDF</li>
+              <li>PNG</li>
+              <li>TIF or TIFF</li>
+            </ul>
+            <p class="govuk-body">
+              Your file must be smaller than 15MB.
+            </p>
+          '
+        }) }}
+
+        <div class="govuk-button-group">
           {{ govukButton({
             text: "Save and continue"
           }) }}
@@ -81,10 +102,10 @@
 
       </form>
 
+    </div>
+    <div class="govuk-grid-column-one-third">
+      {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
+    </div>
   </div>
-  <div class="govuk-grid-column-one-third">
-    {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
-  </div>
-</div>
 
 {% endblock %}
